Alignement correct des titres avec boutons.
- Ils sont reconstruits avec flex, eux aussi.
- À bas les flottants, encore et encore.
- Qu'ils coûlent, d'accord, d'accord.

--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -13,6 +13,18 @@
         }
     }
 
+    section > h2 {
+        display: flex;
+
+        span {
+            flex: 2;
+        }
+
+        .btn {
+            float: none;
+        }
+    }
+
     .article-content {
         .extract-wrapper {
             h3, h4, h5, h6 {
